--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,13 +1,13 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\x83\x66ile:///home/odoo/Downloads/Bohemian.Rhapsody.2018.1080p.WEB-DL.DD5.1.H264-FGT/Bohemian.Rhapsody.2018.720p.WEBRip.x264-[YTS.AM].srt)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\x2{\0\0\0\x84\0\0\0\x1\0\0\0\x1\0\0\x2z\0\0\0\x83\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\a\x9b\0\0\x1\xed\0\0\b#\0\0\0\x4\0\0\a\x9c\0\0\x1\xec\0\0\b\"\0\0\0\x1\0\0\0\0\a\x80)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xef\0\0\x1\n\0\0\x3\x10\0\0\x1\xc3\0\0\x1\xf0\0\0\x1\v\0\0\x3\xf\0\0\x1\xc2\0\0\0\x1\0\0\0\0\x5\0)
 
 [FullScreen]
-pos=@Point(322 704)
-screen=@Rect(0 0 1920 1080)
+pos=@Point(560 2096)
+screen=@Rect(0 1080 1920 1080)
 wide=false
 
 [Help]
@@ -16,15 +16,15 @@ geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\x2\x1f\0\0\x1\xe\0\0\x
 [MainWindow]
 ShowRemainingTime=false
 adv-controls=0
-bgSize=@Size(634 131)
+bgSize=@Size(489 135)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
 [RecentsMRL]
-list=file:///home/odoo/obs/2020-05-02_17-08-24.flv, file:///home/odoo/obs/2020-05-02_17-06-44.flv, file:///home/odoo/obs/2020-05-02_17-06-18.flv, file:///home/odoo/obs/2020-05-02_17-05-00.flv, file:///home/odoo/obs/2020-05-02_16-59-44.flv, file:///home/odoo/obs/2020-05-02_16-58-56.flv, file:///home/odoo/obs/2020-05-01_12-07-16.flv, file:///home/odoo/obs/2020-05-01_11-56-39.flv, file:///home/odoo/obs/2020-05-01_11-40-07.flv, file:///home/odoo/obs/2020-05-01_11-38-22.flv, file:///home/odoo/obs/2020-05-01_11-36-22.flv, file:///home/odoo/obs/2020-05-01_11-35-19.flv, file:///home/odoo/obs/2020-05-01_11-31-04.flv, file:///home/odoo/obs/2020-04-30_18-15-20.flv, file:///home/odoo/obs/2020-04-30_18-06-49.flv, file:///home/odoo/obs/2020-04-30_18-06-16.flv, file:///home/odoo/obs/2020-04-30_18-04-32.flv, file:///home/odoo/obs/2020-04-30_18-03-52.flv, file:///home/odoo/obs/2020-04-30_17-57-59.flv, file:///home/odoo/obs/2020-04-30_17-51-18.flv, file:///home/odoo/Videos/Kazam_screencast_00003.mp4, file:///home/odoo/Videos/Kazam_screencast_00002.mp4, file:///home/odoo/Videos/Kazam_screencast_00001.mp4, file:///home/odoo/Downloads/Green.Book.2018.1080p.WEB-DL.DD5.1.H264-FGT/Green.Book.2018.1080p.WEB-DL.DD5.1.H264-FGT.mkv, file:///home/odoo/Downloads/The%20King%27s%20Speech%20%282010%29/The.Kings.Speech.BR.720p.x264.600MB.YIFY.mkv, file:///home/odoo/Downloads/Climax.2018.1080p.BluRay.10bit.x265-HazMatt.mkv, file:///home/odoo/Downloads/Climax.2018.FRENCH.BRRip.XviD.AC3-NoTag/Climax.2018.FRENCH.BRRip.XviD.AC3-NoTag.avi, file:///media/odoo/622E3A612E3A2F03/The%20Lord%20of%20the%20Rings%20-%20The%20Two%20Towers%202002%201080p%20x265%20AAC%20LC.mkv, file:///home/odoo/Videos/The%20Lord%20of%20the%20Rings%20-%20The%20Two%20Towers%202002%201080p%20x265%20AAC%20LC.mkv, file:///media/odoo/5C09-9B74/Le%20Seigneur%20des%20Anneaux%20Trilogie%201080p%20x265%20AAC%20LC/The%20Lord%20of%20the%20Rings%20-%20The%20Fellowship%20of%20the%20Ring%202001%201080p%20x265%20AAC%20LC.mkv
-times=841881, 0, 0, 0, -1, 0, 103741, 0, 0, 0, 0, 0, 0, 0, 56300, 0, 0, 0, 25417, 0, 0, 0, 0, 0, 0, 0, 0, 12977439, 10807136, -1
+list=file:///home/odoo/obs/2020-05-12_08-02-26.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/imperfection%20sequence.mp4, file:///home/odoo/obs/2020-05-11_22-11-28.flv, file:///home/odoo/obs/2020-05-11_22-10-46.flv, file:///home/odoo/obs/2020-05-11_22-10-04.flv, file:///home/odoo/obs/2020-05-11_22-07-08.flv, file:///home/odoo/obs/2020-05-11_22-06-18.flv, file:///home/odoo/obs/2020-05-11_22-05-11.flv, file:///home/odoo/obs/2020-05-11_22-03-10.flv, file:///home/odoo/obs/2020-05-11_22-00-44.flv, file:///home/odoo/obs/2020-05-11_21-57-31.flv, file:///home/odoo/obs/2020-05-11_12-36-29.flv, file:///home/odoo/obs/2020-05-09_16-43-23.flv, file:///home/odoo/obs/2020-05-09_16-41-07.flv, file:///home/odoo/obs/2020-05-09_16-38-29.flv, file:///home/odoo/obs/2020-05-09_16-36-56.flv, file:///home/odoo/obs/2020-05-04_20-36-12.flv, file:///home/odoo/obs/2020-05-04_21-13-57.flv, file:///home/odoo/obs/2020-05-04_21-00-27.flv, file:///home/odoo/obs/2020-05-04_20-31-13.flv, file:///home/odoo/obs/2020-05-03_19-01-41.flv, file:///home/odoo/obs/2020-05-03_19-25-47.flv, file:///home/odoo/obs/2020-05-03_19-36-16.flv, file:///home/odoo/obs/2020-05-03_18-53-37.flv, file:///home/odoo/obs/2020-05-03_19-15-44.flv, file:///home/odoo/obs/2020-05-03_18-41-25.flv, file:///home/odoo/obs/2020-05-03_18-40-20.flv, file:///home/odoo/obs/2020-05-03_18-39-06.flv, file:///home/odoo/obs/2020-05-02_17-08-24.flv, file:///home/odoo/obs/2020-05-02_17-06-44.flv
+times=0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 94233, 234493, 0, 98262, 0, 382750, 53633, 272945, 0, 0, 0, 0, 841881, 0
 
 [gototimedialog]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\x2\x1c\0\0\x4\xb5\0\0\x2w\0\0\x3\xc1\0\0\x2\x1d\0\0\x4\xb4\0\0\x2v\0\0\0\0\0\0\0\0\a\x80)
