--- a/.config/systemd/user/odoomaster.service
+++ b/.config/systemd/user/odoomaster.service
@@ -8,11 +8,11 @@ Description=Odoo Goa tools
 ; Type=simple
 ; RemainAfterExit=
 Restart=always
-User=odoo
+
 ExecStart=/usr/bin/fish\
           -c '/home/odoo/anaconda3/envs/py365/bin/python\
           /home/odoo/projects/self/odoo-click/odoo-click.py\
-          start -p 9010 master-goaman-utils-nby'
+          start -p 8090'
 
 [Install]
 ; Alias=
