--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,13 +1,13 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\x83\x66ile:///home/odoo/Downloads/Bohemian.Rhapsody.2018.1080p.WEB-DL.DD5.1.H264-FGT/Bohemian.Rhapsody.2018.720p.WEBRip.x264-[YTS.AM].srt)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\a\x9b\0\0\x1\xed\0\0\b#\0\0\0\x4\0\0\a\x9c\0\0\x1\xec\0\0\b\"\0\0\0\x1\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\x3g\0\0\x3\xbe\0\0\x3\xd2\0\0\0\x4\0\0\x3h\0\0\x3\xbd\0\0\x3\xd1\0\0\0\0\0\0\0\0\a\x80)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xef\0\0\x1\n\0\0\x3\x10\0\0\x1\xc3\0\0\x1\xf0\0\0\x1\v\0\0\x3\xf\0\0\x1\xc2\0\0\0\x1\0\0\0\0\x5\0)
 
 [FullScreen]
-pos=@Point(560 2096)
-screen=@Rect(0 1080 1920 1080)
+pos=@Point(560 1016)
+screen=@Rect(0 0 1920 1080)
 wide=false
 
 [Help]
@@ -16,15 +16,18 @@ geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\x2\x1f\0\0\x1\xe\0\0\x
 [MainWindow]
 ShowRemainingTime=false
 adv-controls=0
-bgSize=@Size(489 135)
+bgSize=@Size(954 106)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
+[Mediainfo]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\a\x81\0\0\x4\x39\0\0\0\x1\0\0\0\x1\0\0\a\x80\0\0\x4\x38\0\0\0\0\0\0\0\0\a\x80)
+
 [RecentsMRL]
-list=file:///home/odoo/obs/2020-05-12_08-02-26.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/imperfection%20sequence.mp4, file:///home/odoo/obs/2020-05-11_22-11-28.flv, file:///home/odoo/obs/2020-05-11_22-10-46.flv, file:///home/odoo/obs/2020-05-11_22-10-04.flv, file:///home/odoo/obs/2020-05-11_22-07-08.flv, file:///home/odoo/obs/2020-05-11_22-06-18.flv, file:///home/odoo/obs/2020-05-11_22-05-11.flv, file:///home/odoo/obs/2020-05-11_22-03-10.flv, file:///home/odoo/obs/2020-05-11_22-00-44.flv, file:///home/odoo/obs/2020-05-11_21-57-31.flv, file:///home/odoo/obs/2020-05-11_12-36-29.flv, file:///home/odoo/obs/2020-05-09_16-43-23.flv, file:///home/odoo/obs/2020-05-09_16-41-07.flv, file:///home/odoo/obs/2020-05-09_16-38-29.flv, file:///home/odoo/obs/2020-05-09_16-36-56.flv, file:///home/odoo/obs/2020-05-04_20-36-12.flv, file:///home/odoo/obs/2020-05-04_21-13-57.flv, file:///home/odoo/obs/2020-05-04_21-00-27.flv, file:///home/odoo/obs/2020-05-04_20-31-13.flv, file:///home/odoo/obs/2020-05-03_19-01-41.flv, file:///home/odoo/obs/2020-05-03_19-25-47.flv, file:///home/odoo/obs/2020-05-03_19-36-16.flv, file:///home/odoo/obs/2020-05-03_18-53-37.flv, file:///home/odoo/obs/2020-05-03_19-15-44.flv, file:///home/odoo/obs/2020-05-03_18-41-25.flv, file:///home/odoo/obs/2020-05-03_18-40-20.flv, file:///home/odoo/obs/2020-05-03_18-39-06.flv, file:///home/odoo/obs/2020-05-02_17-08-24.flv, file:///home/odoo/obs/2020-05-02_17-06-44.flv
-times=0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 94233, 234493, 0, 98262, 0, 382750, 53633, 272945, 0, 0, 0, 0, 841881, 0
+list=file:///home/odoo/Documents/videos/martina/render/render3.mp4, file:///home/odoo/Documents/videos/martina/render/render2.mp4, file:///home/odoo/Documents/videos/martina/render/render1.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_171533.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_171533_48khz.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200516_201044.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_190142.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_161048_LS.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_161728.mp4, file:///home/odoo/obs/2020-05-27_10-01-44.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/Sequence%20%231.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_172536.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_172948.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_173034.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_173200.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_180110_LS.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_181438.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_162923.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_165753.mp4, file:///home/odoo/obs/2020-05-12_08-02-26.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/imperfection%20sequence.mp4, file:///home/odoo/obs/2020-05-11_22-11-28.flv, file:///home/odoo/obs/2020-05-11_22-10-46.flv, file:///home/odoo/obs/2020-05-11_22-10-04.flv, file:///home/odoo/obs/2020-05-11_22-07-08.flv, file:///home/odoo/obs/2020-05-11_22-06-18.flv, file:///home/odoo/obs/2020-05-11_22-05-11.flv, file:///home/odoo/obs/2020-05-11_22-03-10.flv, file:///home/odoo/obs/2020-05-11_22-00-44.flv, file:///home/odoo/obs/2020-05-11_21-57-31.flv
+times=0, 0, 0, 436036, 0, 0, 0, 0, 0, 0, 204168, 454883, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
 
 [gototimedialog]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\x2\x1c\0\0\x4\xb5\0\0\x2w\0\0\x3\xc1\0\0\x2\x1d\0\0\x4\xb4\0\0\x2v\0\0\0\0\0\0\0\0\a\x80)
