--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,12 +1,12 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\x83\x66ile:///home/odoo/Downloads/Bohemian.Rhapsody.2018.1080p.WEB-DL.DD5.1.H264-FGT/Bohemian.Rhapsody.2018.720p.WEBRip.x264-[YTS.AM].srt)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\x3g\0\0\x3\xbe\0\0\x3\xd2\0\0\0\x4\0\0\x3h\0\0\x3\xbd\0\0\x3\xd1\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\0\0\a\x80)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xef\0\0\x1\n\0\0\x3\x10\0\0\x1\xc3\0\0\x1\xf0\0\0\x1\v\0\0\x3\xf\0\0\x1\xc2\0\0\0\x1\0\0\0\0\x5\0)
 
 [FullScreen]
-pos=@Point(560 1016)
+pos=@Point(535 898)
 screen=@Rect(0 0 1920 1080)
 wide=false
 
@@ -16,7 +16,7 @@ geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\x2\x1f\0\0\x1\xe\0\0\x
 [MainWindow]
 ShowRemainingTime=false
 adv-controls=0
-bgSize=@Size(954 106)
+bgSize=@Size(1920 1005)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
@@ -26,8 +26,8 @@ status-bar-visible=false
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\a\x81\0\0\x4\x39\0\0\0\x1\0\0\0\x1\0\0\a\x80\0\0\x4\x38\0\0\0\0\0\0\0\0\a\x80)
 
 [RecentsMRL]
-list=file:///home/odoo/Documents/videos/martina/render/render3.mp4, file:///home/odoo/Documents/videos/martina/render/render2.mp4, file:///home/odoo/Documents/videos/martina/render/render1.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_171533.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_171533_48khz.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200516_201044.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_190142.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_161048_LS.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_161728.mp4, file:///home/odoo/obs/2020-05-27_10-01-44.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/Sequence%20%231.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_172536.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_172948.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_173034.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_173200.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_180110_LS.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_181438.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_162923.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_165753.mp4, file:///home/odoo/obs/2020-05-12_08-02-26.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/imperfection%20sequence.mp4, file:///home/odoo/obs/2020-05-11_22-11-28.flv, file:///home/odoo/obs/2020-05-11_22-10-46.flv, file:///home/odoo/obs/2020-05-11_22-10-04.flv, file:///home/odoo/obs/2020-05-11_22-07-08.flv, file:///home/odoo/obs/2020-05-11_22-06-18.flv, file:///home/odoo/obs/2020-05-11_22-05-11.flv, file:///home/odoo/obs/2020-05-11_22-03-10.flv, file:///home/odoo/obs/2020-05-11_22-00-44.flv, file:///home/odoo/obs/2020-05-11_21-57-31.flv
-times=0, 0, 0, 436036, 0, 0, 0, 0, 0, 0, 204168, 454883, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+list=file:///home/odoo/Documents/videos/break_the_pattern/break_the_pattern.mp4, file:///home/odoo/Documents/videos/martina/render/render3.mp4, file:///home/odoo/Documents/videos/martina/render/render2.mp4, file:///home/odoo/Documents/videos/martina/render/render1.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_171533.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_171533_48khz.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200516_201044.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_190142.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_161048_LS.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_161728.mp4, file:///home/odoo/obs/2020-05-27_10-01-44.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/Sequence%20%231.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_172536.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_172948.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_173034.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_173200.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_180110_LS.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_181438.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_162923.mp4, file:///home/odoo/Documents/videos/martina/footage/VID_20200509_165753.mp4, file:///home/odoo/obs/2020-05-12_08-02-26.flv, file:///home/odoo/obs/youtube/imperfection/lightwork_export/imperfection%20sequence.mp4, file:///home/odoo/obs/2020-05-11_22-11-28.flv, file:///home/odoo/obs/2020-05-11_22-10-46.flv, file:///home/odoo/obs/2020-05-11_22-10-04.flv, file:///home/odoo/obs/2020-05-11_22-07-08.flv, file:///home/odoo/obs/2020-05-11_22-06-18.flv, file:///home/odoo/obs/2020-05-11_22-05-11.flv, file:///home/odoo/obs/2020-05-11_22-03-10.flv, file:///home/odoo/obs/2020-05-11_22-00-44.flv
+times=0, 0, 0, 0, 436036, 0, 0, 0, 0, 0, 0, 204168, 454883, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
 
 [gototimedialog]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\x2\x1c\0\0\x4\xb5\0\0\x2w\0\0\x3\xc1\0\0\x2\x1d\0\0\x4\xb4\0\0\x2v\0\0\0\0\0\0\0\0\a\x80)
