--- a/.config/qBittorrent/qBittorrent-data.conf
+++ b/.config/qBittorrent/qBittorrent-data.conf
@@ -1,2 +1,2 @@
 [Stats]
-AllStats=@Variant(\0\0\0\x1c\0\0\0\x2\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0U\0L\0\0\0\x5\0\0\0\x13\xfe/\x1c\xdc\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0\x44\0L\0\0\0\x5\0\0\0\x11\xb9\x1c\x31{)
+AllStats=@Variant(\0\0\0\x1c\0\0\0\x2\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0U\0L\0\0\0\x5\0\0\0\x14\0 \xea%\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0\x44\0L\0\0\0\x5\0\0\0\x11\xd2\xeaz\xc5)
