--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,6 +1,6 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\x83\x66ile:///home/odoo/Downloads/Bohemian.Rhapsody.2018.1080p.WEB-DL.DD5.1.H264-FGT/Bohemian.Rhapsody.2018.720p.WEBRip.x264-[YTS.AM].srt)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\a\x9b\0\0\x2~\0\0\bn\0\0\0\x4\0\0\a\x9c\0\0\x2}\0\0\bm\0\0\0\x1\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\a\x7f\0\0\x2|\0\0\bl\0\0\0\x3\0\0\a\x9b\0\0\x2|\0\0\bl\0\0\0\x1\0\0\0\0\a\x80)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xef\0\0\x1\n\0\0\x3\x10\0\0\x1\xc3\0\0\x1\xf0\0\0\x1\v\0\0\x3\xf\0\0\x1\xc2\0\0\0\x1\0\0\0\0\x5\0)
