--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,13 +1,13 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\x83\x66ile:///home/odoo/Downloads/Bohemian.Rhapsody.2018.1080p.WEB-DL.DD5.1.H264-FGT/Bohemian.Rhapsody.2018.720p.WEBRip.x264-[YTS.AM].srt)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\x1\xea\0\0\0\xcf\0\0\0\x1\0\0\0\x1\0\0\x1\xe9\0\0\0\xce\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x4\xf9\0\0\0\xfa\0\0\0\0\0\0\0\0\0\0\x4\xf9\0\0\0\xfa\0\0\0\0\0\0\0\0\n\0\0\0\0\0\0\0\0\0\0\0\x4\xf9\0\0\0\xfa)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xef\0\0\x1\n\0\0\x3\x10\0\0\x1\xc3\0\0\x1\xf0\0\0\x1\v\0\0\x3\xf\0\0\x1\xc2\0\0\0\x1\0\0\0\0\x5\0)
 
 [FullScreen]
-pos=@Point(560 2096)
-screen=@Rect(0 1080 1920 1080)
+pos=@Point(880 1376)
+screen=@Rect(0 0 2560 1440)
 wide=false
 
 [Help]
@@ -16,7 +16,7 @@ geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\x2\x1f\0\0\x1\xe\0\0\x
 [MainWindow]
 ShowRemainingTime=false
 adv-controls=0
-bgSize=@Size(474 131)
+bgSize=@Size(1274 172)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
@@ -26,8 +26,8 @@ status-bar-visible=false
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\a\x81\0\0\x4\x39\0\0\0\x1\0\0\0\x1\0\0\a\x80\0\0\x4\x38\0\0\0\0\0\0\0\0\a\x80)
 
 [RecentsMRL]
-list=file:///home/odoo/obs/2020-11-27_16-55-15.mkv, file:///home/odoo/obs/2020-11-27_15-58-53.mkv, file:///home/odoo/obs/2020-11-27_15-57-59.mkv, file:///home/odoo/obs/2020-11-27_15-57-27.mkv, file:///home/odoo/obs/2020-11-27_15-40-52.mkv, file:///home/odoo/obs/2020-11-27_15-23-11.mkv, file:///home/odoo/obs/2020-11-27_15-22-55.mkv, file:///home/odoo/obs/2020-11-27_15-22-17.mkv, file:///home/odoo/obs/2020-11-27_12-31-56.mkv, file:///home/odoo/obs/2020-11-27_12-07-39.mkv, file:///home/odoo/obs/fred/2020-11-13_09-48-47%20-%20reactive.mkv, file:///home/odoo/obs/2020-11-13_11-00-34.mkv, file:///home/odoo/obs/2020-11-13_09-48-47.mkv, file:///home/odoo/obs/2020-10-16_12-26-01.flv, file:///home/odoo/obs/2020-10-16_12-24-39.flv, file:///home/odoo/obs/2020-08-14_09-22-49.flv, file:///home/odoo/Downloads/Untitled_%20Jul%2028%2C%202020%2010_45%20AM.webm, file:///home/odoo/Downloads/Untitled_%20Aug%205%2C%202020%2010_45%20AM%20%281%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%283%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%282%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%281%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website.webm, file:///home/odoo/Downloads/Untitled_%20Aug%205%2C%202020%2010_45%20AM.webm, file:///home/odoo/Documents/videos/tech/terminal_vs_gui/1593942455-quick-command-multiples-object.flv, file:///home/odoo/obs/2020-08-07_09-42-17.flv, file:///home/odoo/Downloads/Jabberwock%20Editor%20%281%29.webm, file:///home/odoo/Downloads/Jabberwock%20Editor.webm, file:///home/odoo/obs/1593942455-time.flv, file:///home/odoo/obs/2020-07-05_11-39-31.flv, file:///home/odoo/Documents/videos/break_the_pattern/break_the_pattern.mp4
-times=603716, 1938715, 0, 0, 196699, 0, 0, 0, 0, 264016, 0, 0, 1195266, 0, 0, 0, 73797, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 36264, 0
+list=file:///home/goaman/Downloads/Tenet%20%282020%29%20%5B2160p%5D%20%5B4K%5D%20%5BBluRay%5D%20%5B5.1%5D%20%5BYTS.MX%5D/Tenet.2020.2160p.4K.BluRay.x265.10bit.AAC5.1-%5BYTS.MX%5D.mkv, file:///home/goaman/Downloads/Tenet%20(2020)%20%5B2160p%5D%20%5B4K%5D%20%5BBluRay%5D%20%5B5.1%5D%20%5BYTS.MX%5D/Tenet.2020.2160p.4K.BluRay.x265.10bit.AAC5.1-%5BYTS.MX%5D.mkv, file:///home/odoo/obs/2020-11-27_16-55-15.mkv, file:///home/odoo/obs/2020-11-27_15-58-53.mkv, file:///home/odoo/obs/2020-11-27_15-57-59.mkv, file:///home/odoo/obs/2020-11-27_15-57-27.mkv, file:///home/odoo/obs/2020-11-27_15-40-52.mkv, file:///home/odoo/obs/2020-11-27_15-23-11.mkv, file:///home/odoo/obs/2020-11-27_15-22-55.mkv, file:///home/odoo/obs/2020-11-27_15-22-17.mkv, file:///home/odoo/obs/2020-11-27_12-31-56.mkv, file:///home/odoo/obs/2020-11-27_12-07-39.mkv, file:///home/odoo/obs/fred/2020-11-13_09-48-47%20-%20reactive.mkv, file:///home/odoo/obs/2020-11-13_11-00-34.mkv, file:///home/odoo/obs/2020-11-13_09-48-47.mkv, file:///home/odoo/obs/2020-10-16_12-26-01.flv, file:///home/odoo/obs/2020-10-16_12-24-39.flv, file:///home/odoo/obs/2020-08-14_09-22-49.flv, file:///home/odoo/Downloads/Untitled_%20Jul%2028%2C%202020%2010_45%20AM.webm, file:///home/odoo/Downloads/Untitled_%20Aug%205%2C%202020%2010_45%20AM%20%281%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%283%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%282%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%281%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website.webm, file:///home/odoo/Downloads/Untitled_%20Aug%205%2C%202020%2010_45%20AM.webm, file:///home/odoo/Documents/videos/tech/terminal_vs_gui/1593942455-quick-command-multiples-object.flv, file:///home/odoo/obs/2020-08-07_09-42-17.flv, file:///home/odoo/Downloads/Jabberwock%20Editor%20%281%29.webm, file:///home/odoo/Downloads/Jabberwock%20Editor.webm, file:///home/odoo/obs/1593942455-time.flv
+times=0, 0, 603716, 1938715, 0, 0, 196699, 0, 0, 0, 0, 264016, 0, 0, 1195266, 0, 0, 0, 73797, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
 
 [gototimedialog]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\x2\x1c\0\0\x4\xb5\0\0\x2w\0\0\x3\xc1\0\0\x2\x1d\0\0\x4\xb4\0\0\x2v\0\0\0\0\0\0\0\0\a\x80)
