--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,6 +1,6 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\x83\x66ile:///home/odoo/Downloads/Bohemian.Rhapsody.2018.1080p.WEB-DL.DD5.1.H264-FGT/Bohemian.Rhapsody.2018.720p.WEBRip.x264-[YTS.AM].srt)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x3\0\0\0\x17\0\0\n\x2\0\0\x5g\0\0\0\x3\0\0\0\x17\0\0\n\x2\0\0\x5g\0\0\0\0\0\0\0\0\n\0\0\0\0\x3\0\0\0\x17\0\0\n\x2\0\0\x5g)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x3\0\0\0\x17\0\0\t\xfc\0\0\x4\x80\0\0\0\x3\0\0\0\x17\0\0\t\xfc\0\0\x4\x80\0\0\0\0\0\0\0\0\n\0\0\0\0\x3\0\0\0\x17\0\0\t\xfc\0\0\x4\x80)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xef\0\0\x1\n\0\0\x3\x10\0\0\x1\xc3\0\0\x1\xf0\0\0\x1\v\0\0\x3\xf\0\0\x1\xc2\0\0\0\x1\0\0\0\0\x5\0)
@@ -14,9 +14,10 @@ wide=false
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\x3\0\0\x2\x1f\0\0\x1\xe\0\0\x4\x34\0\0\0\x4\0\0\x2 \0\0\x1\r\0\0\x4\x33\0\0\0\0\0\0\0\0\a\x80)
 
 [MainWindow]
+QtStyle=System's default
 ShowRemainingTime=false
 adv-controls=0
-bgSize=@Size(2560 1361)
+bgSize=@Size(847 199)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
@@ -25,9 +26,12 @@ status-bar-visible=false
 [Mediainfo]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\a\x81\0\0\x4\x39\0\0\0\x1\0\0\0\x1\0\0\a\x80\0\0\x4\x38\0\0\0\0\0\0\0\0\a\x80)
 
+[Preferences]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x4\0\0\0\x18\0\0\t\xfb\0\0\x4\x7f\0\0\0\x5\0\0\0\x19\0\0\t\xfa\0\0\x4~\0\0\0\0\0\0\0\0\n\0\0\0\0\x5\0\0\0\x19\0\0\t\xfa\0\0\x4~)
+
 [RecentsMRL]
-list=file:///home/goaman/Downloads/Dunkirk.2017.4K.UltraHD.BluRay.2160p.x264.DTS-MA.5.1.AC3-POOP/Dunkirk.2017.4K.UltraHD.BluRay.2160p.x264.DTS-MA.5.1.AC3-POOP.mkv, file:///home/goaman/Downloads/Bloodshot%20%282020%29%20%5B2160p%5D%20%5B4K%5D%20%5BBluRay%5D%20%5B5.1%5D%20%5BYTS.MX%5D/Bloodshot.2020.2160p.4K.BluRay.x265.10bit.AAC5.1-%5BYTS.MX%5D.mkv, file:///home/goaman/Downloads/Tenet%20%282020%29%20%5B2160p%5D%20%5B4K%5D%20%5BBluRay%5D%20%5B5.1%5D%20%5BYTS.MX%5D/Tenet.2020.2160p.4K.BluRay.x265.10bit.AAC5.1-%5BYTS.MX%5D.mkv, file:///home/goaman/Downloads/Tenet%20(2020)%20%5B2160p%5D%20%5B4K%5D%20%5BBluRay%5D%20%5B5.1%5D%20%5BYTS.MX%5D/Tenet.2020.2160p.4K.BluRay.x265.10bit.AAC5.1-%5BYTS.MX%5D.mkv, file:///home/odoo/obs/2020-11-27_16-55-15.mkv, file:///home/odoo/obs/2020-11-27_15-58-53.mkv, file:///home/odoo/obs/2020-11-27_15-57-59.mkv, file:///home/odoo/obs/2020-11-27_15-57-27.mkv, file:///home/odoo/obs/2020-11-27_15-40-52.mkv, file:///home/odoo/obs/2020-11-27_15-23-11.mkv, file:///home/odoo/obs/2020-11-27_15-22-55.mkv, file:///home/odoo/obs/2020-11-27_15-22-17.mkv, file:///home/odoo/obs/2020-11-27_12-31-56.mkv, file:///home/odoo/obs/2020-11-27_12-07-39.mkv, file:///home/odoo/obs/fred/2020-11-13_09-48-47%20-%20reactive.mkv, file:///home/odoo/obs/2020-11-13_11-00-34.mkv, file:///home/odoo/obs/2020-11-13_09-48-47.mkv, file:///home/odoo/obs/2020-10-16_12-26-01.flv, file:///home/odoo/obs/2020-10-16_12-24-39.flv, file:///home/odoo/obs/2020-08-14_09-22-49.flv, file:///home/odoo/Downloads/Untitled_%20Jul%2028%2C%202020%2010_45%20AM.webm, file:///home/odoo/Downloads/Untitled_%20Aug%205%2C%202020%2010_45%20AM%20%281%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%283%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%282%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website%20%281%29.webm, file:///home/odoo/Downloads/Home%20_%20My%20Website.webm, file:///home/odoo/Downloads/Untitled_%20Aug%205%2C%202020%2010_45%20AM.webm, file:///home/odoo/Documents/videos/tech/terminal_vs_gui/1593942455-quick-command-multiples-object.flv, file:///home/odoo/obs/2020-08-07_09-42-17.flv, file:///home/odoo/Downloads/Jabberwock%20Editor%20%281%29.webm
-times=6005692, 6081686, 0, 0, 603716, 1938715, 0, 0, 196699, 0, 0, 0, 0, 264016, 0, 0, 1195266, 0, 0, 0, 73797, 0, 0, 0, 0, 0, 0, 0, 0, 0
+list=file:///home/goaman/obs/2021-03-31%2015-03-13.mkv, file:///home/goaman/obs/2021-03-31%2015-02-41.mkv, file:///home/goaman/obs/2021-03-31%2015-02-29.mkv, file:///home/goaman/obs/2021-03-31%2015-01-46.mkv, file:///home/goaman/obs/2021-03-10%2022-51-31.mkv, file:///home/goaman/obs/2021-03-10%2022-47-45.mkv, file:///home/goaman/obs/2021-03-10%2022-45-16.mkv, file:///home/goaman/obs/2021-03-10%2022-43-00.mkv, file:///home/goaman/obs/2021-03-10%2022-40-23.mkv, file:///home/goaman/obs/2021-03-03%2021-37-14.mkv, file:///home/goaman/Downloads/Baby%20Driver%202017%201080p%20WEB-DL%20DD5.1%20X264-CPG/Baby%20Driver%202017%201080p%20WEB-DL%20DD5.1%20X264-CPG.mkv, file:///home/goaman/Downloads/The%20Boss%20Baby%20%282017%29%20%5B1080p%5D%20%5BYTS.AG%5D/The.Boss.Baby.2017.1080p.BluRay.x264-%5BYTS.AG%5D.mp4, file:///home/goaman/obs/2021-03-03%2021-20-23.mkv, file:///home/goaman/obs/2021-03-03%2021-12-06.mkv, file:///home/goaman/obs/2021-03-03%2021-02-49.mkv, file:///home/goaman/obs/2021-03-03%2021-00-25.mkv, file:///home/goaman/obs/2021-03-03%2020-59-00.mkv, file:///home/goaman/obs/2021-03-03%2020-59-17.mkv, file:///home/goaman/obs/2021-03-03%2020-59-35.mkv, file:///home/goaman/obs/2021-03-03%2020-39-34.mkv, file:///home/goaman/obs/2021-03-03%2020-34-30.mkv, file:///home/goaman/obs/2021-03-03%2020-33-09.mkv, file:///home/goaman/obs/2021-02-28%2011-40-16.mkv, file:///home/goaman/obs/2021-02-28%2011-38-21.mkv, file:///home/goaman/obs/2021-02-28%2011-36-45.mkv, file:///home/goaman/obs/2021-02-28%2011-33-57.mkv, file:///home/goaman/obs/2021-02-28%2011-32-44.mkv, file:///home/goaman/Downloads/House.Of.Tolerance.2011.LiMiTED.DVDRip.XviD-LPD/house.of.tolerance.cd2.limited.2011.dvdrip.xvid-lpd.avi, file:///home/goaman/Downloads/House.Of.Tolerance.2011.LiMiTED.DVDRip.XviD-LPD/house.of.tolerance.cd1.limited.2011.dvdrip.xvid-lpd.avi, file:///home/goaman/Downloads/The.Farewell.2019.1080p.WEB-DL.H264.AC3-EVO%5BTGx%5D/The.Farewell.2019.1080p.WEB-DL.H264.AC3-EVO.mkv
+times=0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 324724, 76809, 86943, 123816, 64863, 0, 0, 0, 0, 69449, 0, 252766, 33283, 9449, 0, 0, 2636985, 0, 2358757
 
 [gototimedialog]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\x2\x1c\0\0\x4\xb5\0\0\x2w\0\0\x3\xc1\0\0\x2\x1d\0\0\x4\xb4\0\0\x2v\0\0\0\0\0\0\0\0\a\x80)
