--- a/.config/inkscape/dialogs-state.ini
+++ b/.config/inkscape/dialogs-state.ini
@@ -2,7 +2,7 @@
 Count=1
 
 [Window0Column0]
-Notebook0Dialogs=212;210;218;
+Notebook0Dialogs=212;210;218;209;230;216;
 NotebookCount=1
 BeforeCanvas=false
 
