--- a/.config/inkscape/dialogs-state.ini
+++ b/.config/inkscape/dialogs-state.ini
@@ -2,7 +2,7 @@
 Count=1
 
 [Window0Column0]
-Notebook0Dialogs=212;210;218;209;230;216;
+Notebook0Dialogs=210;218;209;230;216;
 NotebookCount=1
 BeforeCanvas=false
 
@@ -11,6 +11,6 @@ ColumnCount=1
 Floating=false
 
 [transient]
-state1=[Windows]\nCount=1\n\n[Window0Column0]\nNotebook0Dialogs=208;\nNotebookCount=1\n\n[Window0]\nColumnCount=1\nPosition=true\nx=131\ny=220\nwidth=1562\nheight=808\n
+state1=[Windows]\nCount=1\n\n[Window0Column0]\nNotebook0Dialogs=208;\nNotebookCount=1\n\n[Window0]\nColumnCount=1\nPosition=true\nx=131\ny=220\nwidth=1558\nheight=804\n
 dialogs1=208;
 count=1
