--- a/.config/qBittorrent/qBittorrent.conf
+++ b/.config/qBittorrent/qBittorrent.conf
@@ -2,11 +2,11 @@
 MainWindowLastDir=/home/goaman/Downloads
 
 [AddNewTorrentDialog]
-DialogSize=@Size(2420 996)
-RememberLastSavePath=false
+DialogSize=@Size(2056 1786)
+RememberLastSavePath=true
 SplitterState=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x3\x37\0\0\x1\0\0\xff\xff\xff\xff\x1\0\0\0\x1\0)
 expanded=false
-qt5\treeHeaderState="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x6\x34\0\0\0\x3\0\0\0\x2\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\x1,\0\0\0\x6\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)"
+qt5\treeHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x6\x34\0\0\0\x3\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\x2\xa7\0\0\0\x6\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\x1\xdf\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 width=434
 
 [Application]
@@ -23,7 +23,7 @@ enabled=false
 program=
 
 [BitTorrent]
-Session\AsyncIOThreadsCount=4
+Session\AsyncIOThreadsCount=8
 Session\CreateTorrentSubfolder=true
 Session\DisableAutoTMMByDefault=true
 Session\DisableAutoTMMTriggers\CategoryChanged=false
@@ -44,8 +44,8 @@ Notifications\TorrentAdded=false
 Accepted=true
 
 [MainWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\t\xff\0\0\x5\x9f\0\0\0\0\0\0\0\0\0\0\t\xff\0\0\x5\x9f\0\0\0\0\0\0\0\0\n\0\0\0\0\0\0\0\0\0\0\0\t\xff\0\0\x5\x9f)
-qt5\vsplitterState=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0x\0\0\x3\xd6\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\t\xff\0\0\x5\x9f\0\0\0\0\0\0\0\x14\0\0\t\xff\0\0\x5\x9f\0\0\0\0\0\0\0\0\n\0\0\0\0\0\0\0\0\x14\0\0\t\xff\0\0\x5\x9f)
+qt5\vsplitterState=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x1\x2\0\0\b\xe2\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
 
 [Network]
 Cookies="lang=bg; expires=Tue, 23-Feb-2049 19:43:54 GMT; domain=.arenabg.com; path=/"
@@ -69,6 +69,7 @@ Connection\InterfaceName=
 Connection\PortRangeMin=20510
 Connection\ResolvePeerCountries=true
 Connection\ResolvePeerHostNames=false
+Connection\alt_speeds_on=false
 Downloads\DblClOnTorDl=0
 Downloads\DblClOnTorFn=1
 Downloads\NewAdditionDialog=true
@@ -97,12 +98,14 @@ MailNotification\req_ssl=false
 MailNotification\sender=qBittorrent_notification@example.com
 MailNotification\smtp_server=smtp.changeme.com
 MailNotification\username=
+Queueing\MaxActiveDownloads=50
+Queueing\MaxActiveTorrents=50
 Queueing\QueueingEnabled=true
 Scheduler\days=0
 Scheduler\end_time=@Variant(\0\0\0\xf\x4J\xa2\0)
 Scheduler\start_time=@Variant(\0\0\0\xf\x1\xb7t\0)
-State\hSplitterSizes=103, 638
-State\size=@Size(771 583)
+State\hSplitterSizes=103, 632
+State\size=@Size(765 577)
 WebUI\Enabled=false
 
 [PreviewSelectDialog]
@@ -131,18 +134,18 @@ graph_enable_9=false
 period=1
 
 [TorrentAdditionDlg]
-save_path_history=/home/goaman/Downloads, /media/sandisk, /home/odoo/Downloads
+save_path_history=/media/sandisk/movie, /home/goaman/Downloads, /media/sandisk, /media/sandisk/naa xl/naa xl s7, /media/sandisk/naa xl/naa xl s6, /media/sandisk/naa xl s4 torrent, "/media/sandisk/naa xl s2 torrent ", /home/odoo/Downloads
 
 [TorrentProperties]
 CurrentTab=4
 Peers\qt5\PeerListState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x6\x1\0\0\0\0\0\0\0\0\0\0\0\xe\0 \0\0\0\x1\0\0\0\r\0\0\0\x64\0\0\x5\x34\0\0\0\xe\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x84\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
-SplitterSizes="464,853"
+SplitterSizes="456,841"
 Trackers\qt5\TrackerListState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x4:\0\0\0\b\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\b\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1~\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
 Visible=true
-qt5\FilesListState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x5\x1\0\0\0\x6\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\x3\r\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+qt5\FilesListState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\a2\0\0\0\x6\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\x4\x92\0\0\0\x1\0\0\0\0\0\0\x1\x10\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 
 [TransferList]
-qt5\HeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\xe\x33\0\0\0\x1e\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x1e\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x97\0\0\0\x1\0\0\0\0\0\0\0\x61\0\0\0\x1\0\0\0\0\0\0\0`\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\xc5\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x9b\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x62\0\0\0\x1\0\0\0\0\0\0\0}\0\0\0\x1\0\0\0\0\0\0\0T\0\0\0\x1\0\0\0\0\0\0\0k\0\0\0\x1\0\0\0\0\0\0\0X\0\0\0\x1\0\0\0\0\0\0\0r\0\0\0\x1\0\0\0\0\0\0\0`\0\0\0\x1\0\0\0\0\0\0\0\x95\0\0\0\x1\0\0\0\0\0\0\0\x83\0\0\0\x1\0\0\0\0\0\0\0\x65\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\0\x61\0\0\0\x1\0\0\0\0\0\0\0h\0\0\0\x1\0\0\0\0\0\0\0h\0\0\0\x1\0\0\0\0\0\0\0\xa0\0\0\0\x1\0\0\0\0\0\0\0s\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+qt5\HeaderState="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\x1e\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\b\0\0\0\t\0\0\0\x6\0\0\0\n\0\0\0\a\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\x1e\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\b\0\0\0\n\0\0\0\x6\0\0\0\a\0\0\0\t\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\0\0\0\0\0\0\0\xe\xad\0\0\0\x1e\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0o\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x1e\0\0\0=\0\0\0\x1\0\0\0\0\0\0\x1\xfc\0\0\0\x1\0\0\0\0\0\0\0]\0\0\0\x1\0\0\0\0\0\0\0`\0\0\0\x1\0\0\0\0\0\0\0\xa3\0\0\0\x1\0\0\0\0\0\0\0\x90\0\0\0\x1\0\0\0\0\0\0\x1\x3\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0O\0\0\0\x1\0\0\0\0\0\0\0Y\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x62\0\0\0\x1\0\0\0\0\0\0\0}\0\0\0\x1\0\0\0\0\0\0\0T\0\0\0\x1\0\0\0\0\0\0\0k\0\0\0\x1\0\0\0\0\0\0\0X\0\0\0\x1\0\0\0\0\0\0\0r\0\0\0\x1\0\0\0\0\0\0\0`\0\0\0\x1\0\0\0\0\0\0\0\x95\0\0\0\x1\0\0\0\0\0\0\0\x83\0\0\0\x1\0\0\0\0\0\0\0\x65\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\0\x61\0\0\0\x1\0\0\0\0\0\0\0h\0\0\0\x1\0\0\0\0\0\0\0h\0\0\0\x1\0\0\0\0\0\0\0\xa0\0\0\0\x1\0\0\0\0\0\0\0s\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)"
 
 [TransferListFilters]
 TagFilterState=true
