--- a/.config/qBittorrent/qBittorrent-data.conf
+++ b/.config/qBittorrent/qBittorrent-data.conf
@@ -1,2 +1,2 @@
 [Stats]
-AllStats=@Variant(\0\0\0\x1c\0\0\0\x2\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0U\0L\0\0\0\x5\0\0\0\x18\xebN\xa4\xe3\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0\x44\0L\0\0\0\x5\0\0\0J\xe4\xfc\xcf\x43)
+AllStats=@Variant(\0\0\0\x1c\0\0\0\x2\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0U\0L\0\0\0\x5\0\0\0 \xee\xee\xe8s\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0\x44\0L\0\0\0\x5\0\0\x1\x6\xed\x86\xaf\xd6)
