--- a/config/goakarabiner/goakarabiner.yaml
+++ b/config/goakarabiner/goakarabiner.yaml
@@ -112,6 +112,9 @@ layers:
       # - [['@m12'], ['']]\
 
       - [['@o11'], ['#special_chars']]
+      - [['@o12'], ['#app_util']]
+
+      - [['@o21'], ['#accents']]
 
       # hyper key
       - [['caps_lock'], ['tab']]
@@ -134,7 +137,7 @@ layers:
       - [['f2'], ['right_shift']]
       - [['f3'], ['#navigation_and_general_mode']]
 
-      # - [['f4'], ['#accents']]
+      - [['f4'], ['#accents']]
       - [['f5'], ['#numpad_left']]
       - [['f6'], ['#special_chars']]
 
@@ -150,32 +153,9 @@ layers:
       - [['f14'], ['']]
       - [['f15'], ['#left_as_right']]
 
-
-  razer_mouse2:
-    keymap:
-      - [['1'], ['left_control']]
-      - [['2'], ['right_shift']]
-      - [['3'], ['#navigation_and_general_mode']]
-
-      # - [['4'], ['#accents']]
-      - [['5'], ['#numpad_left']]
-      - [['6'], ['#special_chars']]
-
-      - [['7'], ['#f_keys']]
-      # - [['8'], ['#app']]
-      # - [['9'], ['#app_util']]
-
-      - [['10'], ['#screen_and_keyboard_language_layout']]
-
-      - [['11'], ['']]
-      - [['12'], ['BTN_RIGHT']]
-      - [['13'], ['']]
-      - [['14'], ['']]
-      - [[button3], ['#left_as_right']]
-
   app_util:
     keymap:
-      - [['@l23'], ['>/Applications/flameshot.app/Contents/MacOS/flameshot gui']]
+      # - [['@l23'], ['>/Applications/flameshot.app/Contents/MacOS/flameshot gui']]
       - [['@l24'], ['>/Applications/CopyQ.app/Contents/MacOS/CopyQ toggle ']]
 
   f_keys:
@@ -294,7 +274,6 @@ layers:
 
       - [['@l11'], ['>osascript -e ''tell application "System Events" to keystroke "?"''']] # ?
       - [['@l12'], ['>osascript -e ''tell application "System Events" to keystroke "`"''']] # `
-      - [['@l12'], ['>osascript -e ''tell application "System Events" to keystroke "d"''']] # `
       - [['@l13'], ['>osascript -e ''tell application "System Events" to keystroke "-"''']] # +
       - [['@l14'], ['>osascript -e ''tell application "System Events" to keystroke "+"''']] # -
       - [['@l15'], ['>osascript -e ''tell application "System Events" to keystroke "="''']] # =
@@ -310,3 +289,21 @@ layers:
       - [['@l33'], ['>osascript -e ''tell application "System Events" to keystroke "{"''']] # {
       - [['@l34'], ['>osascript -e ''tell application "System Events" to keystroke "}"''']] # }
       - [['@l35'], ['>osascript -e ''tell application "System Events" to keystroke "_"''']] # _
+
+  accents:
+    keymap:
+      - [['@l11'], [{key: "grave_accent_and_tilde", modifiers: ['left_option']}, 'f']] # ù
+      - [['@l12'], [{key: "@l25", modifiers: ['left_option']}, 'f']] # û
+      - [['@l13'], [{key: "@l24", modifiers: ['left_option']}, 'f']] # ü
+      - [['@l14'], [{key: "grave_accent_and_tilde", modifiers: ['left_option']}, 'a']] # à
+      - [['@l15'], [{key: "@l25", modifiers: ['left_option']}, 'a']] # â
+
+      - [['@l21'], [{key: "@l23", modifiers: ['left_option']}, 'd']] # é
+      # - [['@l22'], [{key: "grave_accent_and_tilde", modifiers: ['left_shift']}]] # ~
+      - [['@l22'], [{key: "grave_accent_and_tilde", modifiers: ['left_option']}, 'd']] # è
+      - [['@l23'], [{key: "@l25", modifiers: ['left_option']}, 'd']] # ê
+      - [['@l24'], [{key: "@l24", modifiers: ['left_option']}, 'd']] # ë
+      - [['@l25'], [{key: "2", modifiers: ['left_option', 'left_shift']}]] # €
+
+      - [['@l31'], [{key: "grave_accent_and_tilde", modifiers: ['left_shift']}]] # ~
+
